<resources>
    <string name="app_name">TicTacToe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start_game">Start Game</string>
    <string name="button_how_to_play">How To Play</string>
    <string name="welcome">Welcome</string>
    <string name="audioText">Audible Tic Tac Toe Game\n\nYou can use your voice to command this game.\nFor example say: How to play</string>
    <string name="textViewHowToPlay">How To Play</string>
    <string name="speaking">Speaking</string>
    <string name="permission_audio_title">Allow Record Audio</string>
    <string name="permission_audio_desc">We need Record Audio Permission to listen your voice command.</string>
    <string name="button_give_permission">Give Permission</string>
    <string name="guide_text">The Audible Tic Tac Toe game lets you control the game with spoken commands. Use your voice to navigate between screens, quit the game, and make moves in the game. \nJust say the button name using your voice.\n\nFor example: Start Game \nOn the game screen, it is enough to say the numbers in the game area. After the saying number, the player\'s mark will be added to the game area.\n\nFor example: Eight\nTo return to the previous screen just say: Back</string>
</resources>